kubernetes/manifests/a160a8bb-c496-4345-b977-32295e5115c8/app1-a160a8.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-a160a8
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1-a160a8
  template:
    metadata:
      labels:
        app: app1-a160a8
    spec:
      containers:
        - name: app1-a160a8
          image: zploy-app-a160a8bb-c496-4345-b977-32295e5115c8
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5006
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: app1-a160a8
  namespace: default
spec:
  selector:
    app: app1-a160a8
  ports:
    - port: 80
      targetPort: 5006
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-a160a8
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app1.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-a160a8
                port:
                  number: 80
